<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_background"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".BasicCalculator">

    <include
        layout="@layout/main_toolbar"/>


    <TextView
        android:id="@+id/output"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginTop="55dp"
        android:layout_marginBottom="740dp"
        android:gravity="right"
        android:paddingTop="7dp"
        android:paddingRight="20dp"
        android:paddingBottom="40dp"
        android:text="0"
        android:textSize="22sp"/>

    <TextView
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="135dp"
        android:layout_marginBottom="667dp"
        android:ems="10"
        android:gravity="right"
        android:inputType="number"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp"
        android:text="0"
        android:textSize="20sp"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="416dp"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="70dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/ac"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@color/teal_200"
                android:fontFamily="sans-serif-light"
                android:text="@string/ac"
                android:textSize="22sp"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:id="@+id/backspace"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@color/teal_200"
                android:fontFamily="sans-serif-light"
                android:text="@string/c"
                android:textSize="22sp"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:id="@+id/mod"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@color/teal_200"
                android:fontFamily="sans-serif-light"
                android:text="@string/mod"
                android:textSize="22sp"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:id="@+id/divide"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@color/teal_200"
                android:fontFamily="sans-serif-light"
                android:text="@string/divide"
                android:textSize="22sp"
                style="?android:attr/borderlessButtonStyle"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/seven"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@color/numeric_bground"
                android:fontFamily="sans-serif-light"
                android:text="@string/seven"
                android:textSize="22sp"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:id="@+id/eight"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@color/numeric_bground"
                android:fontFamily="sans-serif-light"
                android:text="@string/eight"
                android:textSize="22sp"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:id="@+id/nine"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@color/numeric_bground"
                android:fontFamily="sans-serif-light"
                android:text="@string/nine"
                android:textSize="22sp"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:id="@+id/product"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@color/teal_200"
                android:fontFamily="sans-serif-light"
                android:text="@string/product"
                android:textSize="22sp"
                style="?android:attr/borderlessButtonStyle"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/four"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@color/numeric_bground"
                android:fontFamily="sans-serif-light"
                android:text="@string/four"
                android:textSize="22sp"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:id="@+id/five"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@color/numeric_bground"
                android:fontFamily="sans-serif-light"
                android:text="@string/five"
                android:textSize="22sp"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:id="@+id/six"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@color/numeric_bground"
                android:fontFamily="sans-serif-light"
                android:text="@string/six"
                android:textSize="22sp"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:id="@+id/minus"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@color/teal_200"
                android:fontFamily="sans-serif-light"
                android:text="@string/minus"
                android:textSize="22sp"
                style="?android:attr/borderlessButtonStyle"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/one"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@color/numeric_bground"
                android:fontFamily="sans-serif-light"
                android:text="@string/one"
                android:textSize="22sp"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:id="@+id/two"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@color/numeric_bground"
                android:fontFamily="sans-serif-light"
                android:text="@string/two"
                android:textSize="22sp"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:id="@+id/three"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@color/numeric_bground"
                android:fontFamily="sans-serif-light"
                android:text="@string/three"
                android:textSize="22sp"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:id="@+id/plus"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@color/teal_200"
                android:fontFamily="sans-serif-light"
                android:text="@string/plus"
                android:textSize="22sp"
                style="?android:attr/borderlessButtonStyle"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/expotention"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@color/teal_200"
                android:fontFamily="sans-serif-light"
                android:text="@string/exp"
                android:textSize="22sp"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:id="@+id/zero"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@color/numeric_bground"
                android:fontFamily="sans-serif-light"
                android:text="@string/zero"
                android:textSize="22sp"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:id="@+id/dot"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@color/numeric_bground"
                android:fontFamily="sans-serif-light"
                android:text="@string/dot"
                android:textSize="22sp"
                android:textStyle="bold"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:id="@+id/equal"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:background="@color/equal_bground"
                android:fontFamily="sans-serif-light"
                android:text="@string/equal"
                android:textSize="22sp"
                style="?android:attr/borderlessButtonStyle"/>
        </TableRow>
    </TableLayout>


    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:layout_gravity="start">

        <include
            layout="@layout/drawer_menu"/>

    </RelativeLayout>
</androidx.drawerlayout.widget.DrawerLayout>